# Ops-Tools

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  build.rs  clippy.toml  install.sh  justfile  update.example.toml
.claude/: ralph-loop.local.md
.github/workflows/: release.yml  security.yml
docs/: PROMPT_TEMPLATE.md  README_ja.md  README_zh-CN.md  README_zh-TW.md  SKILL_INSTALLER.md
src/: main.rs
src/component/: mod.rs
src/component/clear_terrform/: cleaner.rs  mod.rs  scanner.rs
src/component/mcp_manager/: mod.rs
src/component/npm_upgrade/: mod.rs
src/component/package_scanner/: mod.rs  scanner.rs
src/component/terragrunt_apply/: directory_scanner.rs  executor.rs  mod.rs
src/component/terragrunt_generator/: config.rs  generator.rs  mod.rs  template.rs
src/core/: config.rs  error.rs  mod.rs  path_utils.rs  result.rs  traits.rs
src/features/: mod.rs
src/features/container_builder/: config.rs  engines.rs  mod.rs  scanner.rs  types.rs
src/features/cuda_builder/: builder.rs  mod.rs  types.rs
src/features/git_scanner/: installer.rs  mod.rs  scanner.rs  tools.rs
src/features/kubeconfig_manager/: mod.rs  service.rs
src/features/mcp_manager/: config.rs  executor.rs  mod.rs  tools.rs
src/features/package_manager/: config_content.rs  installers.rs  mod.rs  operations.rs  shell.rs  types.rs
src/features/package_scanner/: mod.rs  scanner.rs
src/features/prompt_gen/: executor.rs  interactive.rs  loader.rs  mod.rs  models.rs  progress.rs  project_type.rs  renderer.rs  writer.rs
src/features/prompt_gen/templates/: frontend_section.rs  mod.rs  state_requirement.rs  template_01.rs  template_02.rs  template_03.rs  template_04.rs  yaml_gen_prompt.rs
src/features/rust_builder/: mod.rs
src/features/rust_upgrader/: mod.rs  tools.rs  upgrader.rs
src/features/security_scanner/: installer.rs  mod.rs  supply_chain.rs  tools.rs
src/features/skill_installer/: executor.rs  mod.rs  tools.rs
src/features/system_updater/: mod.rs  ports.rs  testing.rs
src/features/system_updater/application/: cli.rs  dgx_detect.rs  mod.rs  platform.rs  preflight.rs  report_cmd.rs  (+3 more)
src/features/terraform_cleaner/: cleaner.rs  mod.rs  scanner.rs  service.rs
src/features/tool_upgrader/: mod.rs  tools.rs  upgrader.rs
src/i18n/: mod.rs
src/i18n/locales/: en.toml  ja.toml  zh-CN.toml  zh-TW.toml
src/tools/: mod.rs  path_utils.rs  progress.rs  remove.rs  report.rs  traits.rs  ui.rs
src/ui/: console.rs  mod.rs  progress.rs  prompts.rs
(+28 files in other folders)
