[package]
name = "tools"
version = "0.1.0"
edition = "2021"
authors = ["DennySORA"]
description = "A robust Rust-based CLI toolset designed for efficient DevOps workflows, including Terraform cache cleaning, AI tool upgrading, and MCP management."
homepage = "https://github.com/DennySORA/Ops-Tools"
repository = "https://github.com/DennySORA/Ops-Tools"
license = "MIT"
keywords = ["devops", "cli", "terraform", "mcp", "ai-tools"]

[build-dependencies]
dotenv = "0.15"

[dependencies]
dialoguer = "0.12"
walkdir = "2.5"
colored = "3.0"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.24"
