[package]
name = "tools"
version = "0.1.0"
edition = "2021"
authors = ["DennySORA"]
description = "A robust Rust-based CLI toolset designed for efficient DevOps workflows, including Terraform cache cleaning, AI tool upgrading, and MCP management."
homepage = "https://github.com/DennySORA/Ops-Tools"
repository = "https://github.com/DennySORA/Ops-Tools"
license = "MIT"
keywords = ["devops", "cli", "terraform", "mcp", "ai-tools"]

[build-dependencies]
dotenv = "0.15"

[dependencies]
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
walkdir = "2.5"
colored = "3.0"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
serde_yaml = "0.9"
chrono = "0.4"
regex = "1.12"
console = "0.16"
dirs = "6.0"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.24"
